--- a/Introducao/package.json
+++ b/Introducao/package.json
@@ -9,6 +9,7 @@
     "postforrest": "echo 'Depois'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
