--- a/FerrametasLinhaDeComando/package.json
+++ b/FerrametasLinhaDeComando/package.json
@@ -7,14 +7,21 @@
     "dev": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "http-errors": "^1.6.3",
     "jade": "~1.11.0",
+    "marked": "^4.0.12",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "main": "app.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
