--- a/BancoDeDados/package.json
+++ b/BancoDeDados/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "pg": "^8.7.3"
+    "mongoist": "^2.5.3",
+    "pg": "^8.7.3",
+    "redis": "^3.1.2"
   }
 }
