--- a/APIRestFull/package.json
+++ b/APIRestFull/package.json
@@ -18,6 +18,7 @@
     "dnscache": "^1.0.2",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
-    "mongoist": "^2.5.3"
+    "mongoist": "^2.5.3",
+    "mongoose": "^6.2.4"
   }
 }
