--- a/APIRestFull/package.json
+++ b/APIRestFull/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
     "mongoist": "^2.5.3",
-    "mongoose": "^6.2.4"
+    "mongoose": "^6.2.4",
+    "pg": "^8.7.3"
   }
 }
