--- a/APIRestFull/package.json
+++ b/APIRestFull/package.json
@@ -20,6 +20,7 @@
     "http-errors": "^2.0.0",
     "mongoist": "^2.5.3",
     "mongoose": "^6.2.4",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.0.4"
   }
 }
