--- a/APIRestFull/package.json
+++ b/APIRestFull/package.json
@@ -18,8 +18,12 @@
     "dnscache": "^1.0.2",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.29.1",
     "mongoist": "^2.5.3",
     "mongoose": "^6.2.4",
+    "passport": "^0.5.2",
+    "passport-http": "^0.3.0",
     "pg": "^8.7.3",
     "redis": "^3.1.2"
   }
